#666 multiple perspective ipad issue fixed where thumbnails weren't always aligning correctly

--- a/modules/xerte/parent_templates/Nottingham/models_html5/perspectives.css
+++ b/modules/xerte/parent_templates/Nottingham/models_html5/perspectives.css
@@ -74,6 +74,7 @@
 	
 	#thumbHolder .thumbBox {
 		display: inline-block;
+		vertical-align: top;
 		overflow: hidden;
 		width: 6.5em;
 		height: 6.5em;
